<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colormain"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/l_top"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colortop">
        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:textColor="@color/textcolor"
            />
        <TextView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:textColor="@color/textcolor"
            />
    </RelativeLayout>


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developers"
        android:textSize="20dp"
        android:textColor="@color/textcolor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20dp"
        android:textColor="@color/textcolor"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textSize="20dp"
        android:textColor="@color/textcolor"
        android:layout_marginTop="10dp"/>
</LinearLayout>
</LinearLayout>
