<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RadioGroup
        android:id="@+id/rg_btn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@color/anniucolor"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/r_select"
            style="@style/radiobutton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/home_selector"
            android:text="@string/select"
            android:textColor="@drawable/textcolor_selector" />

        <RadioButton
            android:id="@+id/r_myself"
            style="@style/radiobutton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/search_selector"
            android:text="@string/record"
            android:textColor="@drawable/textcolor_selector" />

        <RadioButton
            android:id="@+id/r_guide"
            style="@style/radiobutton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/phone_selector"
            android:text="@string/guide"
            android:textColor="@drawable/textcolor_selector" />

        <RadioButton
            android:id="@+id/r_about"
            style="@style/radiobutton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/pref_selector"
            android:text="@string/about"
            android:textColor="@drawable/textcolor_selector" />
    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rg_btn"></android.support.v4.view.ViewPager>
</RelativeLayout>