<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zzptc.fox.expresscheck.activity.XieyiActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_xieyi"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colormain">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_wuliu"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/iv_photo"
            android:gravity="center"
            android:text="返回"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_xieyi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/xieyiname"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_marginTop="10dp"
        android:text="@string/xieyidaoyan"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/message"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_message1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/message1"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


</RelativeLayout>
