<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zzptc.fox.expresscheck.activity.TraceActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_trace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colormain">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/logisticsQuery"
            android:textSize="18dp" />
    </android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_trace"
        android:background="@color/colormain">

        <RelativeLayout
            android:id="@+id/rt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fffefe">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:src="@mipmap/chaxun" />

            <TextView
                android:id="@+id/tv_wuliu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@+id/iv_photo"
                android:text="@string/logisticsQuery" />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_wuliu"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/iv_photo"
                android:text="@string/company" />

            <TextView
                android:id="@+id/tv_bianhao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_company"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/iv_photo"
                android:text="@string/danHao" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rt_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rt_title"
            android:layout_marginTop="15dp"
            android:background="#fffefe">

            <TextView
                android:id="@+id/tv_genzong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/logisticsTracking" />


            <ListView
                android:id="@+id/lv_trace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tv_genzong"
                android:layout_marginTop="15dp">

            </ListView>


        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>